# ros-gazebo-drone

./: README.md
drone_controller/: CMakeLists.txt  package.xml
drone_controller/include/drone_controller/: drone_interface.h
drone_controller/src/: way_point_topic_pub.cpp
drone_controller_gazebo/: CMakeLists.txt  drone_controller_gazebo_plugins.xml  package.xml
drone_controller_gazebo/include/drone_controller_gazebo/: drone_controller_gazebo.h
drone_controller_gazebo/src/: drone_controller_gazebo.cpp
drone_description/: CMakeLists.txt  package.xml
drone_description/gazebo/: drone.gazebo.xacro
drone_description/urdf/: HummingBird.gv  drone.xacro  drone_base.xacro  model.urdf  quadrotor.xacro
drone_gazebo/: CMakeLists.txt  package.xml
drone_gazebo/launch/: drone_empty_world.launch  spawn_drone.launch
drone_msgs_srvs/: CMakeLists.txt  package.xml
drone_msgs_srvs/msg/: WayPoint.msg
drone_plugins_gazebo/src/: drone_sonar_gazebo_plugin.cpp
drone_teleop/: CMakeLists.txt  package.xml
drone_teleop/src/: drone_teleop.cpp
