<?xml version="1.0"?>
<package>
  <name>drone_controller_gazebo</name>
  <version>0.0.0</version>
  <description>Drone hardware for gazebo simulation</description>

  <maintainer email="hassani.walid@gmail.com">Walid Hassani</maintainer>
  <author email="hassani.walid@gmail.com">Walid Hassani</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>drone_controller</build_depend>
  <build_depend>imu_sensor_interface</build_depend>

  <build_depend>gazebo</build_depend>

  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>drone_controller</run_depend>
  <run_depend>imu_sensor_interface</run_depend>
  
  

  <export>
    <gazebo_ros_control plugin="${prefix}/drone_controller_gazebo_plugins.xml"/>
  </export>
</package>
